# shared_autonomy_perception

./: README.md  stack.xml
assemble_kinect/: CMakeLists.txt  README  package.xml
assemble_kinect/launch/: assemble_kinect.launch
assemble_kinect/scripts/: extract_all.sh  extract_image.py  extract_images.py  save_assembly.py  spoof_assembly.py
assemble_kinect/src/: assemble_kinect.cpp
augmented_grasp_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
augmented_grasp_planner/launch/: augmented_grasping.launch  pr2_augmented_manipulation.launch  pr2_tabletop_augmented_manipulation.launch  pr2_tabletop_augmented_manipulation_gazebo.launch
augmented_grasp_planner/nodes/: augmented_grasping_node.cpp
augmented_grasp_planner/src/: grasp_selection_marker_publisher.cpp  user_grasp_pose_selection.cpp  user_grasp_selection.cpp
augmented_object_detector/: CMakeLists.txt  manifest.xml
augmented_object_detector/launch/: augmented_object_detector.launch  augmented_object_selection.launch  pr2_tabletop_manipulation.launch
augmented_object_detector/src/: GC3DApplication.cpp  augmented_object_selection.cpp  object_detector.cpp
augmented_object_detector/srv/: DetectObject.srv
augmented_object_selection/: CMakeLists.txt  mainpage.dox  manifest.xml
augmented_object_selection/launch/: augmented_object_selection.launch  pr2_tabletop_manipulation.launch
augmented_object_selection/msg/: DatabaseModelComplete.msg
augmented_object_selection/src/: GC3DApplication.cpp  GCApplication.cpp  augmented_object_selection.cpp  test_pick_and_place.cpp
ben_segmentation/: CMakeLists.txt  ben_segmentation_node.cpp  package.xml
ben_segmentation/src/: ben_segmentation_node.cpp
bosch_object_segmentation_gui/: .cproject  .project  CMakeLists.txt  manifest.xml
bosch_object_segmentation_gui/config/: pr2_interactive_manipulation_base.vcg
bosch_object_segmentation_gui/include/bosch_object_segmentation_gui/: grabcut3d_object_segmenter.h  object_segmentation_display.h  object_segmentation_rviz_ui.h  table_detector.h  utils.h
bosch_object_segmentation_gui/launch/: pr2_interactive_manipulation_desktop.launch
bosch_object_segmentation_gui/lib/: rviz_plugin.yaml
bosch_object_segmentation_gui/src/: grabcut3d_object_segmenter.cpp  init.cpp  object_segmentation_display.cpp  object_segmentation_rviz_ui.cpp  table_detector.cpp  utils.cpp
bosch_object_segmentation_gui/ui/: object_segmentation_frame.cpp  object_segmentation_frame.fbp  object_segmentation_frame.h
clear_table/: CMakeLists.txt  clear_table.py  package.xml  setup.py
clear_table/scripts/: clear_table.py  clear_table_moveit.py  clear_table_moveit_ork.py  clear_table_unified.py  handle_point_cloud2.py  run_segmentation.py
clear_table/src/clear_table/: grasp_handler.py  moveit_handler.py  scene_handler.py  sensor_handler.py
documentation/: framework.dot
grabcut3d_segmentation/: CMakeLists.txt  README.md  package.xml
grabcut3d_segmentation/launch/: grabcut3d.launch
grabcut3d_segmentation/src/: grabcut3d_segmentation_node.cpp
grabcut_3d/: CMakeLists.txt  README.md  manifest.xml  package.xml
grabcut_3d/include/grabcut_3d/: grabcut_3d.h
grabcut_3d/src/: grabcut_3d.cpp  grabcut_3d_app.cpp
grabcut_segmentation_web_interface/: README.md  client.py
grabcut_segmentation_web_interface/doc/: Joystick.js.html  TELEOP.KeyboardTeleop.html
grabcut_segmentation_web_interface/pages/: interactive_segmentation_interfaces.html  test_image.html
grabcut_segmentation_web_interface/utils/: README.md  package.json
im_hmi/: CMakeLists.txt  im_gui.py  package.xml
im_hmi/launch/: im_hmi.launch
im_hmi/scripts/: bounding_box.py  edit_pixel_labels.py  im_hmi.py  im_utils.py
image_segmentation_demo/: CMakeLists.txt  mainpage.dox  manifest.xml
image_segmentation_demo/src/: grabcut3d_object_segmenter.cpp  image_segmentation_demo.cpp  object_segmentation_ui.cpp  ros_image_texture.cpp  table_detector.cpp  ui_frame.cpp  utils.cpp
image_segmentation_demo/ui/: object_segmentation_frame.cpp  object_segmentation_frame.fbp  object_segmentation_frame.h  object_segmentation_frame.patch
interactive_rviz_helper/: Makefile  mainpage.dox  manifest.xml  rviz-r30593.patch
interactive_rviz_msgs/: mainpage.dox  manifest.xml
interactive_rviz_msgs/msg/: ControlMessage.msg  SelectionMessage.msg
js_hmi/: AUTHORS.md  README.md  client.py
js_hmi/doc/: KeyboardTeleop.js.html  index.html
js_hmi/pages/: interactive_segmentation_interfaces.html
js_hmi/src/: GrabcutSegmentationLib.js
js_hmi/utils/: Gruntfile.js
ork_tabletop_actionlib_server/: CMakeLists.txt  README.md  package.xml  setup.py
ork_tabletop_actionlib_server/action/: tabletop.action
ork_tabletop_actionlib_server/config/: bosch.yaml  objects_database_local_server.launch
ork_tabletop_actionlib_server/patch/: clusters.patch  ork.rosinstall
ork_tabletop_actionlib_server/scripts/: actionlib_server.py  call_household_database_server.py  monitor_ork.py  ork_tabletop.sh  ork_tabletop_actionlib_server.py  ork_tabletop_main.py  pointclouds.py  test_client.py
random_snippets/: ImageServer.ipynb  README.md  clear_table.ipynb  moveit_pick.ipynb  simple_robot_control.ipynb  testing_Conversions.ipynb  testing_assemble_kinect.ipynb  testing_ben_segmentation.ipynb
safe_teleop_base/: CMakeLists.txt  manifest.xml
safe_teleop_base/src/: safe_trajectory_planner.cpp  safe_trajectory_planner_ros.cpp
safe_teleop_pr2/: manifest.xml
safe_teleop_pr2/launch/: safe_teleop_pr2.launch
safe_teleop_stage/: manifest.xml
scripts/: ork_tabletop_actionlib_server.py
shared_autonomy_launch/: CMakeLists.txt  package.xml
shared_autonomy_launch/launch/: clear_table_unified.launch  move_group.launch  moveit_bosch.rviz  moveit_rviz.launch  openni_segmentation.launch  pr2_hydro.launch  pr2_segmentation.launch  robot_hydro.launch  run_segmentation.launch  sensors_kinect.yaml  setup_logging.launch  shared_autonomy_clear_table.launch  standalone_segmentation.launch
shared_autonomy_msgs/: CMakeLists.txt  package.xml
shared_autonomy_msgs/msg/: BoundingBox.msg  (+1 more)
webtools/: im_gui.html  ros_testing.html
(+31 files in other folders)
